fix: save data during configuration changes